# convomem-sdk

./: .env.example  .gitignore  LICENSE  openapi.json
.github/workflows/: jsr-publish.yml
python/: README.md  pyproject.toml
python/src/convomem/: __init__.py  _async_client.py  _client.py  _errors.py  _types.py  convomem.py
python/src/convomem/resources/: __init__.py  _base.py  conversations.py  customers.py  embed.py  entities.py  insights.py  memories.py  orgs.py  webhooks.py
python/tests/: conftest.py
python/tests/integration/: test_client.py
python/tests/unit/: test_client.py
rust/: Cargo.toml
rust/.config/: nextest.toml
rust/src/: client.rs  convomem.rs  error.rs  lib.rs  types.rs
rust/src/types/: capture.rs  conversation.rs  customer.rs  embed.rs  entity.rs  handoff.rs  insight.rs  memory.rs  mod.rs  org.rs  webhook.rs
rust/tests/: integration.rs  unit.rs
typescript/: client.ts  convomem.ts  deno.json  errors.ts  mod.ts  types.ts
typescript/resources/: capture.ts  conversations.ts  customers.ts  embed.ts  entities.ts  insights.ts  memories.ts  orgs.ts  webhooks.ts
typescript/tests/integration/: client_test.ts
typescript/tests/unit/: client_test.ts
