[package]
name = "convomem"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the ConvoMem Integration API"
license = "MIT"
repository = "https://github.com/sayeed205/convomem-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
