[package]
name = "convomem"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the ConvoMem Integration API"
license = "MIT"
repository = "https://github.com/sayeed205/convomem-sdk"

[dependencies]
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
dotenvy = "0.15"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
